--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        div {
+            text-align: center;
+
+        }
+    </style>
+</head>
 <body>
-<h1>MY MAN!</h1>
-<p>
-Dude , I dont know shit about hosting , just testing now
-</p>
-<body>
+    <div>
+        <h1>Deploying a basic webpage to netlify</h1>
+    </div>
+</body>
 </html>
